--- a/backend/newsletter/templates/footer.html
+++ b/backend/newsletter/templates/footer.html
@@ -42,7 +42,7 @@
                 padding: 10px;
                 background-color: #f4f4f4;
               "
-              >LIneA is supported by</span
+              >LIneA is sponsored by</span
             ><br />
             <img
               style="width: 90px; padding: 8px"
@@ -91,37 +91,38 @@
     cellpadding="0"
     cellspacing="0"
     role="presentation"
-    style="background: #f4f4f4; background-color: #f4f4f4; width: 100%"
+    style="background: #0076bc; width: 100%"
   >
     <tbody>
       <tr>
         <td style="width: 100px">
           <div
             style="
-              font-family: Roboto, Helvetica, Arial, sans-serif, 'Arial Narrow',
-                Arial, sans-serif;
-              font-size: 16px;
-              font-style: normal;
+              font-family: Roboto, Helvetica, Arial, sans-serif;
+              font-size: 12px;
               font-weight: bold;
               text-align: right;
-              color: #e5e5e5;
+              color: #293465;
               height: 100%;
               width: 600px;
               padding: 10px;
-              background-color: #0076bc;
+              background-color: #d8d8d8;
+              display: flex;
+              align-items: flex-end; /* Aligns content to the bottom */
+              justify-content: flex-end; /* Aligns content to the right */
             "
           >
-            <span style="display: inline-block; vertical-align: middle"
-              >Powered by</span
-            >
+            <span style="line-height: 10px">Powered by</span>
             <a
-              style="display: inline-block; vertical-align: middle"
+              style="display: inline-block; margin-left: 5px"
               href="http://www.linea.org.br/"
-              ><img
-                style="width: 60px"
-                src="https://solarsystem.linea.org.br/static/media/linea-logo-mini.af872eca151f1ecc55b4.png"
-                alt=""
-            /></a>
+            >
+              <img
+                style="height: 30px; vertical-align: bottom"
+                src="https://solarsystem.linea.org.br/img/linea-logo.png"
+                alt="Linea Logo"
+              />
+            </a>
           </div>
         </td>
       </tr>
