--- a/backend/newsletter/templates/welcome.html
+++ b/backend/newsletter/templates/welcome.html
@@ -65,11 +65,8 @@
                 <tr>
                     <td style="width:100px;">
                         <hr style="width: 600px; color: rgba(79, 78, 78, 0.618);border-color: rgba(0, 0, 0, 0.222)">
-                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:10px;font-style:normal;font-weight:normal;text-align: center;color: rgba(79, 78, 78, 0.618);  height: 10px; width:600px; padding: 10px; background-color: #F4F4F4;">
-                            <form action="" method="post">
-                                If you no longer wish to receive our emails, click here to
-                            <button style="border: none;font-family:Roboto, Helvetica, Arial, sans-serif; font-weight:normal; font-size:10px; background-color: #F4F4F4; color: red; cursor: pointer;" type="submit" name="email"><a href={{host}}/login/ style="color:#fb101095;font-weight: normal; text-decoration: none;" target="_blank">unsubscribe.</a></button>
-                            </form>
+                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:11px;font-style:normal;font-weight:normal;text-align: center;color: rgb(79, 78, 78);  height: 10px; width:600px; padding: 10px; background-color: #F4F4F4;">
+                            If you wish to unsubscribe or manage your subscription preferences, <a href={{host}}/login/ style="color:#fb101095;font-weight: normal; text-decoration: none;" target="_blank">click here</a>.
                         </div>
                         <hr style="width: 600px; color: rgba(79, 78, 78, 0.618);border-color: rgba(0, 0, 0, 0.222)">
                     </td>
